--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "component-states",
-  "version": "0.1.0",
+  "name": "bredele-states",
+  "version": "0.1.1",
   "description": "Finite state machine",
   "main": "index.js",
   "scripts": {
