--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "url": "https://github.com/bredele/mood/issues"
   },
   "devDependencies": {
-    "mocha": "~1.18.0"
+    "mocha": "~1.18.0",
+    "tape": "^4.6.2"
   },
   "dependencies": {
-    "component-emitter": "~1.1.2"
+    "component-emitter": "^1.2.1"
   }
 }
